實作分層分類功能
