# routes/categories.js
@@ -2,40 +2,16 @@ const express = require("express");
 const router = express.Router();
 
 const { sleep } = require("../classes/utils");
-const { convertToCategorySummaryContent, convertToCategoryContent } = require("../classes/converters");
+const { convertToCategoryTree, convertToCategoryContent } = require("../classes/converters");
 const categoryModel = require("../models/categoryModel");
 
 /**
- * 取得所有分類摘要
- * GET: /api/v1/categories/summaries
+ * 取得樹狀結構的分類列表
+ * GET: /api/v1/categories/tree
  */
-router.get("/summaries", async function (req, res, next) {
-  const rolesSummariesContents = categoryModel.categories.map(convertToCategorySummaryContent);
-
-  res.status(200).json(rolesSummariesContents);
-});
-
-/**
- * 取得分類列表
- * GET: /api/v1/categories
- */
-router.get("/", async function (req, res, next) {
-  console.log(categoryModel.categories);
-  const page = req.query.page || 1;
-  const pageSize = req.query.pageSize || 20;
-
-  let matchedCategories = categoryModel.categories;
-
-  const startIndex = (page - 1) * pageSize;
-  const endIndex = page * pageSize;
-  const matchedPaginationCategories = matchedCategories.slice(startIndex, endIndex);
-
-  const CategoryContents = matchedPaginationCategories.map(convertToCategoryContent);
-
-  res.append("X-Page", page);
-  res.append("X-Page-Size", pageSize);
-  res.append("X-Total", matchedCategories.length);
-  res.status(200).json(CategoryContents);
+router.get("/tree", async function (req, res, next) {
+  const categoryTree = convertToCategoryTree(categoryModel.categories);
+  res.status(200).json(categoryTree);
 });
 
 /**
@@ -49,9 +25,9 @@ router.get("/:id", async function (req, res, next) {
     res.status(404).send();
   }
 
-  const CategoryContent = convertToCategoryContent(existedCategory);
+  const categoryContents = convertToCategoryContent(existedCategory);
 
-  res.status(200).json(CategoryContent);
+  res.status(200).json(categoryContents);
 });
 
 /**
@@ -59,14 +35,30 @@ router.get("/:id", async function (req, res, next) {
  * POST: /api/v1/categories
  */
 router.post("/", async function (req, res, next) {
-  const { name } = req.body;
+  const { name, parentId } = req.body;
   // 驗證輸入
+
+  let parentCategory;
+  if (parentId) {
+    parentCategory = categoryModel.categories.find((category) => category.id === Number(parentId));
+    if (!parentCategory) {
+      res.status(400).send();
+      return;
+    }
+
+    if (parentCategory.level >= 3) {
+      res.status(400).send();
+      return;
+    }
+  }
 
   const now = new Date().toISOString();
 
   const category = {
     id: ++categoryModel.lastId,
     name,
+    parentId: parentId ? parentId : null,
+    level: parentId ? parentCategory.level + 1 : 1,
     createdTime: now,
   };
 
@@ -84,14 +76,24 @@ router.patch("/:id", async function (req, res, next) {
 
   if (!existedCategory) {
     res.status(404).send();
+    return;
   }
 
   // 驗證輸入
   const name = req.body.name || existedCategory.name;
+  // 目前系統限制只可以修改分類名稱
+  // const parentId = req.body.parentId === undefined ? existedCategory.parentId : req.body.parentId;
+  // const parentCategory = categoryModel.categories.find((category) => category.id === Number(parentId));
+  // if (!parentCategory) {
+  //   res.status(400).send();
+  //   return;
+  // }
 
   const category = {
     ...existedCategory,
     name,
+    // parentId,
+    // level: parentCategory.level + 1,
   };
 
   const existedCategoryIndex = categoryModel.categories.findIndex((category) => category.id === Number(req.params.id));
@@ -107,11 +109,18 @@ router.patch("/:id", async function (req, res, next) {
  * DELETE: /api/v1/categories/{id}
  */
 router.delete("/:id", async function (req, res, next) {
-  const existedCategoryIndex = categoryModel.categories.findIndex((category) => category.id === Number(req.params.id));
-
-  if (existedCategoryIndex === -1) {
+  const existedCategory = categoryModel.categories.find((category) => category.id === Number(req.params.id));
+  if (!existedCategory) {
     res.status(404).send();
   }
+
+  const hasChildren = categoryModel.categories.find((category) => category.parentId === existedCategory.id) !== null;
+
+  if (hasChildren) {
+    res.status(403).send();
+  }
+
+  const existedCategoryIndex = categoryModel.categories.findIndex((category) => category.id === Number(req.params.id));
 
   categoryModel.categories.splice(existedCategoryIndex, 1);
 
